fixed cashby team error of alignCenter deleting linear gradient

--- a/styles/scss/modules/_homePage.scss
+++ b/styles/scss/modules/_homePage.scss
@@ -465,7 +465,7 @@
 
     h1 {
       // position: relative;
-      @include alignCenter;
+      // @include alignCenter;
       height: 70px;
       // @include alignCenter;
 
